fix header gap

--- a/assets/sass/pages/_company-partners.scss
+++ b/assets/sass/pages/_company-partners.scss
@@ -1,8 +1,6 @@
 .company-partners-screen1 {
     overflow: hidden;
 
-    margin-top: 100px;
-
     .contents-container {
         background-color: $c-gray-base-light;
     }
